<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="write_support">Написать в поддрежку</string>
    <string name="share">Поделиться приложением</string>
    <string name="dark_theme">Тёмная тема</string>
    <string name="user_declaration">Пользовательское соглашение</string>
    <string name="settings">Настройки</string>
    <string name="search">Поиск</string>
    <string name="mediateka">Медиатека</string>
    <string name="lll">https://developer.android.com/training/sharing/send?hl=ru</string>
    <string name="link_to_practikum">https://practicum.yandex.ru/android-developer/?from=catalog</string>
    <string name="title_to_support">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="message_to_support">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="student_mail">Sapog730@yandex.ru</string>
    <string name="link_to_offerta">https://yandex.ru/legal/practicum_offer/ru/</string>
    <string name="clear">x</string>
    <string name="no_connection_search">Проблемы со связью</string>
    <string name="no_connection_search2">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="no_find_search">Ничего не нашлось</string>
    <string name="refresh">Обновить</string>
    <string name="search_history">Вы искали</string>
    <string name="delete_history">Очистить историю</string>
    <string name="long_track">Длительность</string>
    <string name="album_track">Альбом</string>
    <string name="year_track">Год</string>
    <string name="genre_track">Жанр</string>
    <string name="country_track">Страна</string>
    <string name="fragment_no_playlist">Вы не создали</string>
    <string name="fragment_no_playlist2">ни одного плейлиста</string>
    <string name="fragment_no_mediateka">Ваша медиатека пуста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="name">Название*</string>
    <string name="description">Описание</string>
    <string name="make">Создать</string>
    <string name="track">трека</string>
    <string name="tracks">треков</string>
    <string name="onetrack">трек</string>
    <string name="minutes">минут</string>
    <string name="oneminute">минута</string>
    <string name="minuti">минуты</string>
</resources>