<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/AudioplayerScreenDayNight"
    tools:context=".ui.audioplayer.FragmentMakeNewPlaylist"
    >
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/tool_bar"
        style="@style/Toolbar.TitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        app:title="@string/new_playlist"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/arrow_back">
    </com.google.android.material.appbar.MaterialToolbar>

    <ImageView
        android:id="@+id/imageButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_max="312dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="26dp"
        android:scaleType="centerCrop"
        android:src="@drawable/set_playlist_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tool_bar" />


    <EditText
        android:id="@+id/name"
        android:layout_marginTop="32dp"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
       style="@style/EditTextPlayMake"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton"
        android:background="@drawable/edittext_field"
        android:hint="@string/name"
        android:paddingHorizontal="15dp"
        />

    <EditText
        android:id="@+id/description"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        android:background="@drawable/edittext_field"
        android:hint="@string/description"
        style="@style/EditTextPlayMake"
        android:paddingHorizontal="15dp"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appCompatButton"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/create_button_states"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/make"
        android:textAllCaps="false"
        android:enabled="false"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
