<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    style="@style/BackgroundSearchAct"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/tool_bar"
        style="@style/Toolbar.TitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/search"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        android:padding="4dp"
        app:navigationIcon="@drawable/arrow_back">
    </com.google.android.material.appbar.MaterialToolbar>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="8dp"
    android:layout_marginHorizontal="12dp">

    <EditText
        android:id="@+id/search_line"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:maxLines="1"
        android:maxLength="20"
        android:hint="@string/search"
        android:inputType="text"
        android:background="@drawable/shape_edit_text"
        style="@style/EditTextSearch"
        android:paddingHorizontal="12dp"
        android:textColor="@color/YPblack"
        android:drawableStart="@drawable/search"
        android:drawablePadding="10dp"
        android:fontFamily="@font/ys_display_regular"
        android:textSize="@dimen/small_text"
        android:imeOptions="actionDone"
        android:singleLine="true"/>
    <TextView
        android:id="@+id/clear"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_gravity="right|center_vertical"
        android:gravity="right"
        android:background="@drawable/shape_edit_text"
        android:paddingRight="12dp"
        style="@style/EditTextSearch"
        android:visibility="gone"
        android:drawableEnd="@drawable/cancel" />

</FrameLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView

            android:id="@+id/history_textview"
            style="@style/PlaceholderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="42dp"
            android:fontFamily="@font/ys_text_medium"
            android:text="@string/search_history"
            android:textSize="19sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycle_tracks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="20dp"
            app:layout_constraintHeight_max="450dp"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/history_textview"
            tools:layout_editor_absoluteX="12dp" />

        <Button
            android:id="@+id/clear_history_button"
            style="@style/RefreshButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/ys_text_medium"
            android:text="@string/delete_history"
            android:textSize="14sp"
            android:visibility="visible"
            app:cornerRadius="54dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recycle_tracks" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <ImageView
        android:id="@+id/image_placeholder"
        android:layout_width="120dp"
        android:src="@drawable/noconnection"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="105dp"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/placetext_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/PlaceholderText"
        android:text="@string/no_connection_search"
        android:textSize="19sp"
        android:fontFamily="@font/ys_display_medium"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="24dp"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/placetext_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/PlaceholderText"
        android:text="@string/no_connection_search2"
        android:textSize="19sp"
        android:gravity="center"
        android:fontFamily="@font/ys_display_medium"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="24dp"
        android:visibility="gone"/>

    <Button
        android:id="@+id/research_button"
        android:layout_marginTop="24dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:textSize="14sp"
        style="@style/RefreshButton"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/refresh"
        android:textAllCaps="false"
        app:cornerRadius = "54dp"
        android:layout_height="wrap_content"
        android:visibility="gone"/>



</LinearLayout>