<?xml version="1.0" encoding="utf-8"?>


<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".ui.audioplayer.AudioplayerActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


<androidx.core.widget.NestedScrollView
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.audioplayer.AudioplayerActivity">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/AudioplayerScreenDayNight"
        >





        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/tool_bar"
            style="@style/Toolbar.TitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleTextAppearance="@style/Toolbar.TitleText"
            android:padding="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/arrow_back">
        </com.google.android.material.appbar.MaterialToolbar>



        <ImageView
            android:id="@+id/album"
            app:layout_constraintDimensionRatio="h,1:1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="80dp"
            android:src="@drawable/bigplaceholder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            style='@style/PlaceholderText'
            android:id="@+id/track_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/album"
            android:layout_marginTop="20dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:textSize="@dimen/big_text"
            android:fontFamily="@font/ys_text_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/track_band"
            style="@style/PlaceholderText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/track_name"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/ys_text_medium"
            android:textSize="14sp"
            />

        <ImageButton
            android:id="@+id/play_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/playbutton"
            app:layout_constraintEnd_toEndOf="@id/album"
            app:layout_constraintStart_toStartOf="@id/album"
            app:layout_constraintTop_toBottomOf="@id/track_band" />

        <ImageButton
            android:id="@+id/add_to_playlist_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/addbutton"
            app:layout_constraintBottom_toBottomOf="@id/play_button"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            app:layout_constraintTop_toTopOf="@+id/play_button" />

        <ImageButton
            android:id="@+id/like_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/likebutton"
            app:layout_constraintBottom_toBottomOf="@+id/play_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/play_button"
            android:layout_marginEnd="24dp"/>
        <TextView
            android:id="@+id/track_long"
            style="@style/PlaceholderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/play_button"
            android:text="0:00"
            android:textSize="14sp"
            android:fontFamily="@font/ys_text_medium"
            app:layout_constraintStart_toStartOf="@id/play_button"
            app:layout_constraintEnd_toEndOf="@id/play_button"
            android:gravity="center"
            android:layout_marginTop="12dp"/>

        <TextView
            android:id="@+id/track_long_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/track_long"
            android:layout_marginTop="30dp"
            android:layout_marginStart="16dp"
            android:text="@string/long_track"
            style="@style/TrackDescription" />
        <TextView
            android:id="@+id/track_album_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/track_long_text"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            style="@style/TrackDescription"
            android:text="@string/album_track" />
        <TextView
            android:id="@+id/track_year_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TrackDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/track_album_text"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/year_track" />
        <TextView
            android:id="@+id/track_genre_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TrackDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/track_year_text"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/genre_track" />
        <TextView
            android:id="@+id/track_country_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TrackDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/track_genre_text"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/country_track" />



        <TextView
            android:id="@+id/track_long_text_set"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/track_long_text"
            app:layout_constraintBaseline_toBaselineOf="@id/track_long_text"
            android:layout_marginTop="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            style="@style/TrackDescriptionSet"/>

        <TextView
            android:id="@+id/track_album_text_set"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/track_album_text"
            app:layout_constraintBaseline_toBaselineOf="@id/track_album_text"
            android:layout_marginTop="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            style="@style/TrackDescriptionSet"/>

        <TextView
            android:id="@+id/track_year_text_set"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/track_year_text"
            app:layout_constraintBaseline_toBaselineOf="@id/track_year_text"
            android:layout_marginTop="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            style="@style/TrackDescriptionSet"/>

        <TextView
            android:id="@+id/track_genre_text_set"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/track_genre_text"
            app:layout_constraintBaseline_toBaselineOf="@id/track_genre_text"
            android:layout_marginTop="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            style="@style/TrackDescriptionSet"/>

        <TextView
            android:id="@+id/track_country_text_set"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/track_country_text"
            app:layout_constraintBaseline_toBaselineOf="@id/track_country_text"
            android:layout_marginTop="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            style="@style/TrackDescriptionSet"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>

    <View android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/standard_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bottom_sheet"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        app:behavior_hideable="true"
        app:behavior_peekHeight="505dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounder" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_to_playlist"
            android:textSize="@dimen/big_text"
            android:textColor="@color/YPblack"
            android:fontFamily="@font/ys_display_medium"
            android:layout_marginTop="30dp"/>

        <Button
            android:id="@+id/new_playlist_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/new_playlist"
            android:fontFamily="@font/ys_text_medium"
            android:textSize="14sp"
            android:layout_gravity="center"
            style="@style/RefreshButton"
            app:cornerRadius="54dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/playlist_recycle"
            android:layout_marginTop="24dp"
            android:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/container_view_audioplayer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>